# flax-qwen3

./: .gitignore  README.md  pyproject.toml
src/: autocomplete.py  chat.py  convert_weights.py  main.py  model.py  qwen3.ipynb
