[project]
name = "flax-qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.4",
    "huggingface-hub>=1.4.1",
    "jax[cuda]>=0.9.0.1",
    "numpy>=2.3.5",
    "safetensors>=0.7.0",
    "transformers>=5.2.0",
]
