[project]
name = "flax-qwen3"
version = "0.1.0"
description = "Qwen3 model written using Flax Linen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.4",
    "huggingface-hub>=1.4.1",
    "ipywidgets>=8.1.8",
    "jax[cuda]>=0.9.0.1",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "safetensors>=0.7.0",
    "transformers>=5.2.0",
    "treescope>=0.1.10",
]
